# ha_besen-bs20

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  SUPPORT.md  hacs.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  device_compatibility.yml  feature_request.yml
.github/workflows/: ci.yml  hassfest.yaml  release.yml
custom_components/besen_bs20/: __init__.py  client.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  exceptions.py  manifest.json  number.py  protocol.py  quality_scale.yaml  repairs.py  select.py  sensor.py  strings.json  switch.py  text.py
src/besen_bs20/: __init__.py  client.py  const.py  models.py
tests/: conftest.py  test_client.py  test_config_flow.py  test_coordinator.py  test_diagnostics_repairs.py  test_entities.py  test_init.py  test_models.py  test_protocol.py
