[project]
name = "ha-besen-bs20"
version = "0.1.2"
description = "Native Home Assistant custom integration for Besen BS20 EV chargers over BLE"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Yoav Mor", email = "moryoav@gmail.com" }]
dependencies = [
  "bleak-retry-connector>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "homeassistant>=2025.1.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["custom_components/besen_bs20"]
omit = [
  "custom_components/besen_bs20/translations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["A", "ASYNC", "B", "C4", "DTZ", "E", "F", "FA", "I", "ICN", "N", "PERF", "PIE", "PTH", "RET", "RUF", "SIM", "T20", "UP", "W"]
ignore = ["ASYNC109", "N818"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.besen_bs20"]
