[project]
name = "ha-besen-bs20"
version = "0.1.8"
description = "Native Home Assistant custom integration for Besen BS20 EV chargers over BLE"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Yoav Mor", email = "moryoav@gmail.com" }]
dependencies = [
  "bleak-retry-connector>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "homeassistant>=2025.1.0",
  "mypy>=1.16.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["custom_components/besen_bs20"]
omit = [
  "custom_components/besen_bs20/translations/*",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["A", "ASYNC", "B", "C4", "DTZ", "E", "F", "FA", "I", "ICN", "N", "PERF", "PIE", "PTH", "RET", "RUF", "SIM", "T20", "UP", "W"]
ignore = ["ASYNC109", "N818"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.besen_bs20"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
explicit_package_bases = true
files = ["custom_components/besen_bs20", "tests"]
exclude = ["ha_besen_bs20.egg-info"]

[[tool.mypy.overrides]]
module = ["bleak.*", "bleak_retry_connector.*"]
ignore_missing_imports = true
